[metadata]
name = copier
version= 3.0
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
description = A library for rendering projects templates.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/jpscaletti/copier
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3


[bdist_wheel]
universal = 1


[options]
include_package_data = true
packages = find:
python_requires = >=3.6,<4.0
install_requires =
    jinja2 ~= 2.10
    colorama ~= 0.4
    toml ~= 0.10
    ruamel.yaml ~= 0.15
    pydantic ~= 0.30

[options.packages.find]
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-mock
    pytest-mypy

dev =
    # Testing & Validation
    pytest
    pytest-mock
    pytest-mypy
    pytest-cov
    pytest-flake8
    flake8
    ipdb
    tox

[options.entry_points]
console_scripts =
    copier = copier.cli:run


[flake8]
max-complexity = 10
max-line-length = 88

statistics = true
doctests = True
accept-encodings = utf-8

select = C,E,F,W,B,B950
# W503 line break before binary operator
# E203 whitespace before ':'
# D100  Missing docstring in public module
# D101  Missing docstring in public class
# D102  Missing docstring in public method
# D103  Missing docstring in public function
# D104  Missing docstring in public package
# D105  Missing docstring in magic method
# D107  Missing docstring in __init__
ignore = W503,E203,D100,D101,D102,D103,D104,D105,D107


[tool:pytest]
addopts = --mypy --doctest-modules

[mypy]
check_untyped_defs = True
# disallow_subclassing_any = True
ignore_missing_imports = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True
warn_redundant_casts = True

