[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "Copier"
version = "2.0.0"
description = "A library for rendering projects templates"
license = "MIT"

readme = "README.md"
homepage = "https://github.com/jpscaletti/copier"

# Requirements
[tool.poetry.dependencies]
python = "^3.6"
